Move the API from node.js to django

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,38 +16,19 @@ services:
       timeout: 5s
       retries: 5
 
-  api:
-    build: 
-      context: ./api
-      dockerfile: Dockerfile
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      DB_USER: tofu_user
-      DB_HOST: db
-      DB_DATABASE: tofudb
-      DB_PASSWORD: your_secure_password
-      DB_PORT: 5432
-      NODE_ENV: production
-      PORT: 8080
-    ports:
-      - "8080:8080"
-    command: npm start
-
   web:
     build:
       context: ./web
       dockerfile: Dockerfile
     depends_on:
-      - api
       - db
+    env_file:
+      - web/.env
     environment:
-      DATABASE_URL: postgresql://tofu_user:your_secure_password@db:5432/tofudb
-      DJANGO_SETTINGS_MODULE: config.settings
-      DJANGO_SECRET_KEY: your_secure_django_secret
+      DB_HOST: db
     ports:
       - "8000:8000"
+    command: python manage.py runserver 0.0.0.0:8000
 
 volumes:
   postgres_data:
