--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   db:
-    image: postgres:16
+    build:
+      context: ./db
+      dockerfile: Dockerfile
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./db/init:/docker-entrypoint-initdb.d:ro
@@ -21,7 +23,8 @@ services:
       context: ./web
       dockerfile: Dockerfile
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - web/.env
     environment:
