--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -7,3 +7,8 @@ openai==1.64.0
 sqlparse==0.5.3
 tzdata==2025.1
 python-dotenv==1.0.1
+langchain==0.3.19
+langchain-community==0.3.18
+langchain-openai==0.3.7
+beautifulsoup4==4.13.3
+chromadb==0.6.3
