--- a/web/.env.example
+++ b/web/.env.example
@@ -1,9 +1,17 @@
+# API Keys
 OPENAI_API_KEY=your_api_key_here
+
+# Django Configuration
 SECRET_KEY=your_django_secret_key_here
+DEBUG=True
+
+# Database Configuration
 DB_NAME=tofudb
 DB_USER=tofu_user
 DB_PASSWORD=your_secure_password
 DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=tofudb
-DEBUG=True
+
+# Temporal Configuration
+TEMPORAL_HOST=localhost:7233
