--- a/web/.env.example
+++ b/web/.env.example
@@ -6,12 +6,12 @@ SECRET_KEY=your_django_secret_key_here
 DEBUG=True
 
 # Database Configuration
-DB_NAME=tofudb
-DB_USER=tofu_user
+DB_NAME=addb
+DB_USER=ad_user
 DB_PASSWORD=your_secure_password
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=tofudb
+DB_DATABASE=addb
 
 # Temporal Configuration
 TEMPORAL_HOST=localhost:7233
