--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./db/init:/docker-entrypoint-initdb.d:ro
     environment:
-      POSTGRES_DB: tofudb
-      POSTGRES_USER: tofu_user
+      POSTGRES_DB: addb
+      POSTGRES_USER: ad_user
       POSTGRES_PASSWORD: your_secure_password
     ports:
       - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U tofu_user -d tofudb"]
+      test: ["CMD-SHELL", "pg_isready -U ad_user -d addb"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -41,7 +41,7 @@ services:
     environment:
       - DB=postgresql
       - DB_PORT=5432
-      - POSTGRES_USER=tofu_user
+      - POSTGRES_USER=ad_user
       - POSTGRES_PWD=your_secure_password
       - POSTGRES_SEEDS=db
       - POSTGRES_DB=temporaldb
