--- a/workflow/Dockerfile
+++ b/workflow/Dockerfile
@@ -11,5 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy workflow code
 COPY . .
 
+# Set Python path to include the parent directory
+ENV PYTHONPATH=/app
+
 # Run the worker
-CMD ["python", "worker.py"]
+CMD ["python", "/app/workflow/worker.py"]
